# polymarket-lp-mm

./: .env.example  .gitignore  Cargo.toml  README.md  config.example.toml  config.toml  config.toml.example
configs/: strategy-aggressive.toml  strategy-balanced.toml  strategy-conservative.toml
docs/: 00-system-overview.md  01-data-layer.md  02-qscore-rewards.md  03-pricing-engine.md  04-position-management.md  05-risk-control.md  06-execution-layer.md  07-ops-monitoring.md  08-dynamic-strategy.md  PRD.md  PROGRESS.md  PROJECT-PLAN.md
src/: lib.rs  main.rs
src/config/: mod.rs
src/data/: ctf.rs  gamma.rs  mod.rs  rest.rs  state.rs  ws.rs
src/execution/: mod.rs
src/monitor/: mod.rs  strategy.rs
src/position/: mod.rs
src/pricing/: mod.rs
src/risk/: mod.rs
src/strategy/: mod.rs
src/tui/: app.rs  event.rs  input.rs  mod.rs  modal.rs  snapshot.rs  ui.rs
src/tui/tabs/: charts.rs  mod.rs  orders.rs  overview.rs  risk.rs  strategy.rs
tests/: config_tests.rs  position_tests.rs  pricing_tests.rs  risk_tests.rs  state_tests.rs
